End of section 4

--- a/SkiNet/SkiNet/appsettings.Development.json
+++ b/SkiNet/SkiNet/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-BVQCUE4\\MRSOVSQLSERVER;Initial Catalog=SkiNet;Integrated Security=True"
-  }
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
