--- a/client/package.json
+++ b/client/package.json
@@ -30,23 +30,26 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.12",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "^11.2.12",
     "@angular/compiler-cli": "~11.2.13",
     "@nativescript/schematics": "^11.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
+    "jquery": "^3.6.0",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "popper.js": "^1.16.1",
+    "postcss": "^8.3.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "tslint": "^5.16.0",
+    "typescript": "4.1.5"
   }
 }
