--- a/SkiNet/Properties/launchSettings.json
+++ b/SkiNet/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "SkiNet.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
