--- a/SkiNet/appsettings.Development.json
+++ b/SkiNet/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-BVQCUE4\\MRSOVSQLSERVER;Initial Catalog=SkiNet;Integrated Security=True",
-    "IdentityConnection": "Data Source=DESKTOP-BVQCUE4\\MRSOVSQLSERVER;Initial Catalog=SkiNetIdentity;Integrated Security=True",
+    "DefaultConnection": "Data Source=USER\\SQLEXPRESS;Initial Catalog=SkiNet;Integrated Security=True",
+    "IdentityConnection": "Data Source=USER\\SQLEXPRESS;Initial Catalog=SkiNetIdentity;Integrated Security=True",
     "Redis": "localhost"
   },
   "Token": {
